# MobileSystem-Lab

Pract_MS_2/app/src/main/res/layout/: activity_action_rectangle.xml  activity_count_sum.xml  activity_five_rectangles.xml  activity_main.xml  calc_dialog.xml
Pract_MS_2/app/src/main/res/values/: strings.xml
Pract_MS_3/app/src/main/: AndroidManifest.xml
Pract_MS_3/app/src/main/res/layout/: activity_date_time.xml  activity_main.xml  activity_remained_tasks.xml
Pract_MS_3/app/src/main/res/layout-v26/: activity_remained_tasks.xml
Pract_MS_3/app/src/main/res/values/: strings.xml
Pract_MS_4/app/: build.gradle
Pract_MS_4/app/src/main/: AndroidManifest.xml
Pract_MS_4/app/src/main/res/layout/: activity_dialog_tasks.xml  activity_main.xml  card_view_pattern.xml
Pract_MS_4/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
Pract_MS_4/app/src/main/res/values-night/: themes.xml
Pract_MS_5/app/: build.gradle
Pract_MS_5/app/src/main/: AndroidManifest.xml
Pract_MS_5/app/src/main/res/layout/: activity_list_view_add_remove.xml
Pract_MS_5/app/src/main/res/values/: strings.xml
Pract_MS_6/app/src/main/res/layout/: activity_animate_text.xml  activity_custom_component.xml  activity_custom_time_picker.xml
Pract_MS_6/app/src/main/res/values/: attr.xml  (+1 more)
Pract_MS_7/app/: CMakeLists.txt
Pract_MS_7/app/src/main/cpp/: Dictionary.cpp  Dictionary.h
Pract_MS_7/app/src/main/java/com/example/pract_ms_7/: CounterActivity.kt  DictionaryActivity.kt
Pract_MS_7/app/src/main/res/layout/: activity_counter.xml
Pract_MS_7/app/src/main/res/values/: strings.xml
(+14 files in other folders)
